Trying to get build to work.
SVN-Revision: 3

--- a/build-custom.properties
+++ b/build-custom.properties
@@ -42,7 +42,7 @@
 #copy-custom-beans.main.ignore=yes
 #copy-custom-beans.custom.use=yes
 #copy-custom-orm.main.ignore=yes
-#copy-custom-orm.custom.use=yes
+copy-custom-orm.custom.use=yes
 #copy-project-framework.main.ignore=yes
 #copy-project-framework.custom.use=yes
 #copy-server-file.main.ignore=yes
@@ -92,7 +92,7 @@
 #generate-xml-mapping.main.ignore=yes
 #generate-xml-mapping.custom.use=yes
 #init-project.main.ignore=yes
-#init-project.custom.use=yes
+init-project.custom.use=yes
 #jetc.main.ignore=yes
 #jetc.custom.use=yes
 #package-client.main.ignore=yes
