--- a/build.properties
+++ b/build.properties
@@ -19,7 +19,7 @@ dir.temp.zip=${dir.temp}/zip
 
 dir.src.custom=custom
 dir.src.custom.beans=${dir.src.custom}/${project_name}
-dir.src.custom.orm=${dir.src.custom}/${project_name}
+file.orm.configuration=${dir.src.custom}/${project_name}
 
 dir.framework=${dir.output}/framework
 dir.framework.build=${dir.framework}/build/classes
@@ -113,6 +113,8 @@ file.license=license.txt
 
 file.orm.properties=hibernate.properties
 file.orm.configuration=orm1.cfg.xml
+file.orm2.configuration=orm2.cfg.xml
+
 file.cache.properties=ehcache.xml
 file.dao.configuration=DAOConfig.xml
 
