--- a/conf/deploy.properties
+++ b/conf/deploy.properties
@@ -23,7 +23,7 @@
 #   SYSTEM PROPERTIES
 #
 ######################################
-mysql_home=C:/env/mysql
+mysql_home=C:/mysql
 j2se_container_home=c:/env/jboss-4.0.2
 
 ######################################
@@ -102,7 +102,7 @@ datadump_name=cabioexampledata.SQL
 create_cache=yes
 #cachepath=C:/tomcat/temp/cache
 
-cachepath=C:/env/jboss-4.0.2/cache/cache
+cachepath=C:/jboss-4.0.2/cache/cache
 #cachepath=/usr/local/jboss-4.0.2/server/default/log/cache
 
 
