Added two more tags.
SVN-Revision: 9

--- a/build.properties
+++ b/build.properties
@@ -19,6 +19,8 @@ dir.temp.zip=${dir.temp}/zip
 
 dir.src.custom=custom
 dir.src.custom.beans=${dir.src.custom}/${project_name}
+dir.src.custom.wsdd=${dir.src.custom}/${project_name}
+dir.src.custom.framework=${dir.src.custom}/${project_name}
 file.orm.configuration=${dir.src.custom}/${project_name}
 
 dir.framework=${dir.output}/framework
@@ -42,6 +44,7 @@ dir.output.doc=${dir.framework}/doc
 
 
 dir.output.project=${dir.output}/${project_name}
+dir.output.project.web-inf=${dir.output}/${project_name}/WEB-INF
 dir.output.project.build=${dir.output.project}/classes
 dir.output.project.client=${dir.output.project}/client
 dir.output.project.conf=${dir.output.project}/conf
@@ -114,6 +117,7 @@ file.license=license.txt
 file.orm.properties=hibernate.properties
 file.orm.configuration=orm1.cfg.xml
 file.orm2.configuration=orm2.cfg.xml
+file.server.config.wsdd=server-config.wsdd
 
 file.cache.properties=ehcache.xml
 file.dao.configuration=DAOConfig.xml
@@ -142,6 +146,7 @@ file.core.install.properties=conf/download.properties
 
 file.build.custom=build-custom.xml
 file.properties.custom=build-custom.properties
+evs_model=evs3-1.xmi
 
 #file.build.custom=build-custom-cacore.xml
 #file.properties.custom=build-custom-cacore.properties
