changed the model name back to the cabio example model.
SVN-Revision: 10

--- a/conf/deploy.properties
+++ b/conf/deploy.properties
@@ -24,7 +24,7 @@
 #
 ######################################
 mysql_home=C:/mysql
-j2se_container_home=c:/env/jboss-4.0.2
+j2se_container_home=c:/jboss-4.0.2
 
 ######################################
 #
@@ -39,15 +39,15 @@ webservice_name=cacoreService
 #  MODEL PROPERTIES
 #
 ######################################
-model_filename=cacore3-1.xmi
-fixed_filename=fixed_cacore3-1.xmi
+model_filename=cabioExampleDomainModel.xmi
+fixed_filename=fixed_cabioExampleDomainModel.xmi
 
 include_package=.*domain.*
 exclude_package=
 exclude_name=
 external_server_name=
 
-fix_xmi=no
+fix_xmi=yes
 xmi_preprocessor=gov.nih.nci.codegen.core.util.EAXMIPreprocessor
 
 ######################################
