Refactored build script to separate codegen from rest of framework; added start-mysql and start-container properties to deploy.properties
SVN-Revision: 11

--- a/build.properties
+++ b/build.properties
@@ -18,19 +18,22 @@ dir.temp=temp
 dir.temp.zip=${dir.temp}/zip
 
 dir.src.custom=custom
-dir.src.custom.beans=${dir.src.custom}/${project_name}
-dir.src.custom.wsdd=${dir.src.custom}/${project_name}
-dir.src.custom.framework=${dir.src.custom}/${project_name}
-file.orm.configuration=${dir.src.custom}/${project_name}
+dir.src.custom.project=${dir.src.custom}/${project_name}
+dir.src.custom.beans=${dir.src.custom.project}
+dir.src.custom.orm=${dir.src.custom.project}
+dir.src.custom.wsdd=${dir.src.custom.project}
+dir.src.custom.framework=${dir.src.custom.project}
+file.orm.configuration=${dir.src.custom.project}
 
-dir.framework=${dir.output}/framework
-dir.framework.build=${dir.framework}/build/classes
 dir.framework.src=src
-dir.framework.codegen.src=${dir.framework.src}/gov/nih/nci/codegen
-dir.framework.package=${dir.framework}/package
+
+dir.generator.build=${dir.output}/SDKCodeGenerator
+dir.generator.src=${dir.framework.src}   
+dir.generator.exception.src=${dir.framework.src}/gov/nih/nci/common/exception
+dir.generator.util.src=${dir.framework.src}/gov/nih/nci/common/util
 
 dir.output.package=${dir.output}/package
-dir.output.doc=${dir.framework}/doc
+dir.output.doc=${dir.output}/doc
 
 
 #################################################################################
@@ -49,7 +52,8 @@ dir.output.project.build=${dir.output.project}/classes
 dir.output.project.client=${dir.output.project}/client
 dir.output.project.conf=${dir.output.project}/conf
 dir.output.project.doc=${dir.output.project}/doc
-dir.output.project.framework=${dir.output.project}/framework
+dir.output.project.framework.src=${dir.output.project}/framework/src
+dir.output.project.framework.build=${dir.output.project}/framework/build
 dir.output.project.junit=${dir.output.project}/junit
 dir.output.project.orm=${dir.output.project}/orm/hibernate/
 dir.output.project.package=${dir.output.project}/package
@@ -146,7 +150,6 @@ file.core.install.properties=conf/download.properties
 
 file.build.custom=build-custom.xml
 file.properties.custom=build-custom.properties
-evs_model=evs3-1.xmi
 
 #file.build.custom=build-custom-cacore.xml
 #file.properties.custom=build-custom-cacore.properties
