--- a/build-custom.properties
+++ b/build-custom.properties
@@ -21,8 +21,6 @@
 #build-artifacts.custom.use=yes
 #build-beans.main.ignore=yes
 #build-beans.custom.use=yes
-#build-framework.main.ignore=yes
-#build-framework.custom.use=yes
 #build-orm.main.ignore=yes
 #build-orm.custom.use=yes
 #build-schema.main.ignore=yes
@@ -33,16 +31,20 @@
 #clean.custom.use=yes
 #clean-all.main.ignore=yes
 #clean-all.custom.use=yes
-#clean-framework.main.ignore=yes
-#clean-framework.custom.use=yes
+#clean-generator.main.ignore=yes
+#clean-generator.custom.use=yes
 #compile-beans.main.ignore=yes
 #compile-beans.custom.use=yes
 #compile-framework.main.ignore=yes
 #compile-framework.custom.use=yes
+#compile-generator.main.ignore=yes
+#compile-generator.custom.use=yes
+#compile-templates.main.ignore=yes
+#compile-templates.custom.use=yes
 #copy-custom-beans.main.ignore=yes
 #copy-custom-beans.custom.use=yes
 #copy-custom-orm.main.ignore=yes
-copy-custom-orm.custom.use=yes
+#copy-custom-orm.custom.use=yes
 #copy-project-framework.main.ignore=yes
 #copy-project-framework.custom.use=yes
 #copy-server-file.main.ignore=yes
@@ -92,13 +94,9 @@ copy-custom-orm.custom.use=yes
 #generate-xml-mapping.main.ignore=yes
 #generate-xml-mapping.custom.use=yes
 #init-project.main.ignore=yes
-init-project.custom.use=yes
-#jetc.main.ignore=yes
-#jetc.custom.use=yes
+#init-project.custom.use=yes
 #package-client.main.ignore=yes
 #package-client.custom.use=yes
-#package-framework.main.ignore=yes
-#package-framework.custom.use=yes
 #package-server.main.ignore=yes
 #package-server.custom.use=yes
 #package-system.main.ignore=yes
