--- a/conf/deploy.properties
+++ b/conf/deploy.properties
@@ -31,8 +31,8 @@ j2se_container_home=c:/jboss-4.0.2
 #  PROJECT PROPERTIES
 #
 ######################################
-project_name=cacore32
-webservice_name=cacoreService
+project_name=example
+webservice_name=exampleService
 
 ######################################
 #
@@ -66,6 +66,8 @@ web_server_port=8080
 container_type=jboss
 jboss_configuration=default
 
+start_container=yes
+
 ######################################
 #
 #  DATABASE PROPERTIES
@@ -80,6 +82,8 @@ db_server_name=localhost
 db_user=cabiouser
 db_password=cabio
 schema_name=cacore
+
+start_mysql=yes
 
 ######################################
 #
