--- a/conf/CORESystem.properties
+++ b/conf/CORESystem.properties
@@ -8,5 +8,13 @@ eager_fetch_many2one_packages
 #Hold default Gene URL for SVG Pathway Diagram
 GENE_INFO_STRING=CMAP/Genes/GeneInfo?
 
+#caCORE version number
+VERSION=CACORE_3.2
+
+#Comma seperated list of Property files
+PROPERTY_FILE=cacoreBeans.properties
+
+#Use caCORE Ontology search mechanism for Web Service 
+CACORE_ONTOLOGY=TRUE
 
 
