--- a/build.xml
+++ b/build.xml
@@ -63,6 +63,7 @@
 		<istrue value="${import_data}"/>
 	</condition>
 
+
 	<!-- THIS IS HERE FOR HISTORICAL REASONS: db_flavor USED TO BE CONDITIONAL -->
 	<property name="db_flavor" value="${database_type}"/>
 
@@ -101,6 +102,9 @@
 		<istrue value="${start_container}"/>
 	</condition>
 
+	<condition property="server-exclude-list" value="commons-logging-1.1.jar,spring-richclient-full-0.1.0.jar,log4j-1.2.13.jar" else="commons-logging-1.1.jar,spring-richclient-full-0.1.0.jar">
+		<isset property="jboss-yes"/>
+	</condition>
 
 <!--***********************************************************************
 	*** OTHER INCLUDED ANT BUILD FILES
@@ -918,15 +922,18 @@
 				<include name="aspect*.jar"/>
 				<include name="hibernate3.jar"/>
 				<include name="log4j*.jar"/>
-				<include name="commons-logging.jar"/>
+				<include name="commons-logging-1.1.jar"/>
 				<include name="commons-discovery-0.2.jar"/>
 				<include name="wsdl4j-1.5.1.jar"/>
-				<include name="cglib-full*.jar"/>
-				<include name="castor-0.9.9.jar"/>
+				<include name="cglib-2.1.3.jar"/>
+				<include name="castor-1.0.2.jar"/>
 				<include name="xercesImpl.jar"/>
 				<include name="spring.jar"/>
-				<include name="spring-richclient.jar"/>
+				<include name="spring-richclient-full-0.1.0.jar"/>
 				<include name="xml-apis.jar"/>
+				<include name="asm.jar"/>
+				<include name="asm-attrs.jar"/>
+
 			</zipfileset>
 			<zipfileset dir="${dir.conf}" includes="client_log4j.properties" prefix="conf"/>
 			<zipfileset dir="${dir.output.project.conf}" includes="${file.control.remoteservice}" prefix="conf"/>
@@ -953,15 +960,13 @@
 		depends="-package-server.main,-package-server.custom"
 		description="Creates .war file for server"/>
 
+		
 	<target name="-package-server.main" unless="package-server.main.ignore">
 		<SDKecho message="Creating .war file for server"/>
 		<delete file="${dir.output.project.package.server}/${file.project.server.war}"/>
 		<war destfile="${dir.output.project.package.server}/${file.project.server.war}"
 			webxml="${dir.conf}/web.xml" update="yes">
-			<lib dir="${dir.lib}">
-				<exclude name="commons-logging*.*"/>
-				<exclude name="spring-richclient.jar"/>
-			</lib>
+			<lib dir="${dir.lib}"  excludes="${server-exclude-list}"/>
 			<zipfileset dir="${dir.conf}" prefix="log">
 				<include name="server.log"/>
 				<include name="client.log"/>
