--- a/temp-compare/Salvatore Mungal/deploy.properties
+++ b/temp-compare/Salvatore Mungal/deploy.properties
@@ -17,32 +17,35 @@
 #   BASIC PROPERTIES
 #
 ################################################################################
-
+java_home=C:/java/jdk1.5.0_06
 ######################################
 #
 #   SYSTEM PROPERTIES
 #
 ######################################
-mysql_home=C:/mysql
-j2se_container_home=c:/tomcat
+mysql_home=C:/mysql/mysql-4.1.10
+#j2se_container_home=C:/jboss/jboss-4.0.2
+j2se_container_home=c:/tomcat/${tomcat.unzip.path}
 
 ######################################
 #
 #  PROJECT PROPERTIES
 #
 ######################################
-project_name=cagrid_test
-webservice_name=cagrid_testService
+project_name=example
+webservice_name=exampleService
 
 ######################################
 #
 #  MODEL PROPERTIES
 #
 ######################################
-model_filename=cagrid-1.0-tests-data.xmi
-fixed_filename=annotated_fixed_cagrid-1.0-tests-data.xmi
+model_filename=WCIP01_v1_rv1.xmi
+fixed_filename=fixed_WCIP01_v1_rv1.xmi
+#model_filename=cabioExampleDomainModel.xmi
+#fixed_filename=fixed_cabioExampleDomainModel.xmi
 
-include_package=.*domain.*
+include_package=.*P1017.*
 exclude_package=
 exclude_name=
 external_server_name=
@@ -64,6 +67,7 @@ web_server_name=localhost
 web_server_port=8080
 
 container_type=tomcat
+#container_type=jboss
 jboss_configuration=default
 
 ######################################
@@ -76,10 +80,17 @@ jboss_configuration=default
 #
 ######################################
 database_type=mysql
-db_server_name=localhost
-db_user=cabiouser
-db_password=cabio
-schema_name=cagrid_test
+db_server_name=cbiodb2-d.nci.nih.gov
+db_user=cacoresdk
+db_password=sdk1234
+schema_name=CADEV
+
+# default example
+#database_type=mysql
+#db_server_name=localhost
+#db_user=cabiouser
+#db_password=cabio
+#schema_name=cacore
 
 ######################################
 #
@@ -91,15 +102,15 @@ create_mysql_user=no
 
 create_schema=no
 import_data=no
-ddl_filename=data_cagrid_test_schema.SQL
-datadump_name=data_cagrid_test_data.SQL
+ddl_filename=cabioexampleschma.SQL
+datadump_name=cabioexampledata.SQL
 
 ######################################
 #
 #  CACHING PROPERTIES
 #
 ######################################
-create_cache=yes
+create_cache=no
 cachepath=C:/tomcat/temp/cache
 
 #cachepath=C:/jboss-4.0.2/cache/cache
