--- a/conf/hibernate/hibernate.properties
+++ b/conf/hibernate/hibernate.properties
@@ -13,17 +13,20 @@ hibernate.query.substitutions true 1, false 0, yes 'Y', no 'N'
 
 ## DB2
 @DBTYPE_DB2@hibernate.dialect org.hibernate.dialect.DB2Dialect
-@DBTYPE_DB2@hibernate.connection.driver_class COM.ibm.db2.jdbc.net.DB2Driver
+@DBTYPE_DB2@hibernate.connection.driver_class com.ibm.db2.jdbc.net.DB2Driver
+#@DBTYPE_DB2@hibernate.connection.driver_class com.p6spy.engine.spy.P6SpyDriver
 @DBTYPE_DB2@hibernate.connection.url jdbc:db2:/@SERVERNAME@/@DBNAME@
 
 ## MySQL
 @DBTYPE_MYSQL@hibernate.dialect org.hibernate.dialect.MySQLDialect
 @DBTYPE_MYSQL@hibernate.connection.driver_class com.mysql.jdbc.Driver
+#@DBTYPE_MYSQL@hibernate.connection.driver_class com.p6spy.engine.spy.P6SpyDriver
 @DBTYPE_MYSQL@hibernate.connection.url jdbc:mysql://@SERVERNAME@/@DBNAME@
 
 ## Oracle
 @DBTYPE_ORACLE@hibernate.connection.url jdbc:oracle:thin:@@SERVERNAME@:1521:@DBNAME@
 @DBTYPE_ORACLE@hibernate.dialect org.hibernate.dialect.Oracle9Dialect
+#@DBTYPE_ORACLE@hibernate.dialect com.p6spy.engine.spy.P6SpyDriver
 @DBTYPE_ORACLE@hibernate.connection.driver_class oracle.jdbc.driver.OracleDriver
 
 hibernate.connection.username @DBUSER@
