--- a/build.codegen.properties
+++ b/build.codegen.properties
@@ -1,3 +1,4 @@
+
 #Source Folders
 dir.src=src
 dir.lib=lib
@@ -12,6 +13,7 @@ dir.src.custom.lib=${dir.src.custom.project}/lib
 
 #Configuration File Folders
 dir.conf=conf
+dir.conf.scripts=${dir.conf}/build-scripts
 dir.conf.template=${dir.conf}/codegen/template
 dir.conf.control=${dir.conf}/codegen/control-files
 dir.conf.remoting=${dir.conf}/remoting
@@ -41,6 +43,7 @@ dir.output.project.package.thickclient=${dir.output.project.package}/thick-clien
 dir.output.project.classes=${dir.output.project}/classes
 
 dir.output.conf=${dir.output.project}/${dir.conf}
+dir.output.conf.scripts=${dir.output.project}/${dir.conf.scripts}
 dir.output.conf.control=${dir.output.project}/${dir.conf.control}
 dir.output.conf.remoting=${dir.output.project}/${dir.conf.remoting}
 dir.output.conf.hibernate=${dir.output.project}/${dir.conf.hibernate}
