Changes made for Removing BaseDelegate and Introducing Spring
SVN-Revision: 190

--- a/build.codegen.properties
+++ b/build.codegen.properties
@@ -16,7 +16,7 @@ dir.conf=conf
 dir.conf.scripts=${dir.conf}/build-scripts
 dir.conf.template=${dir.conf}/codegen/template
 dir.conf.control=${dir.conf}/codegen/control-files
-dir.conf.remoting=${dir.conf}/remoting
+dir.conf.spring=${dir.conf}/spring
 dir.conf.hibernate=${dir.conf}/hibernate
 dir.conf.web=${dir.conf}/web
 dir.conf.webservice=${dir.conf}/webservice
@@ -45,7 +45,7 @@ dir.output.project.classes=${dir.output.project}/classes
 dir.output.conf=${dir.output.project}/${dir.conf}
 dir.output.conf.scripts=${dir.output.project}/${dir.conf.scripts}
 dir.output.conf.control=${dir.output.project}/${dir.conf.control}
-dir.output.conf.remoting=${dir.output.project}/${dir.conf.remoting}
+dir.output.conf.spring=${dir.output.project}/${dir.conf.spring}
 dir.output.conf.hibernate=${dir.output.project}/${dir.conf.hibernate}
 dir.output.conf.web=${dir.output.project}/${dir.conf.web}
 dir.output.conf.webservice=${dir.output.project}/${dir.conf.webservice}
