Included Spring Bean Configuration file in the .war file
SVN-Revision: 194

--- a/build.xml
+++ b/build.xml
@@ -1024,6 +1024,7 @@
 			<zipfileset dir="${dir.output.project.conf}" prefix="WEB-INF/classes/xslt">
 				<include name="*.xsl"/>
 			</zipfileset>
+			<classes file="${dir.conf}/spring/SDKSpringBeanConfig.xml"/>
 		</war>
 	</target>
 
