Included compile target
SVN-Revision: 199

--- a/conf/demo/thick-client/build.xml
+++ b/conf/demo/thick-client/build.xml
@@ -21,7 +21,10 @@
 	<!-- ************************************************************************************************-->
 
 	<target name="rundemo">
-		<echo>${java.class.path}</echo>
+		<javac srcdir="." >
+			<include name="TestClient.java"/>
+			<classpath refid="classpath"/>
+		</javac>
 		<java classname="TestClient" fork="true">
 			<classpath refid="classpath"/>
 		</java>
