Add a system property that is used to determine whether or not debug stack trace information should be displayed to the user on the browser screen.
SVN-Revision: 205

--- a/conf/resources/server/CORESystem.properties
+++ b/conf/resources/server/CORESystem.properties
@@ -17,4 +17,6 @@ PROPERTY_FILE=cacoreBeans.properties
 #Use caCORE Ontology search mechanism for Web Service 
 CACORE_ONTOLOGY=TRUE
 
+#Debug (Print) stack trace on JSP page? 
+DEBUG_STACKTRACE=FALSE
 
