Added property for webservice URL
SVN-Revision: 220

--- a/build.codegen.properties
+++ b/build.codegen.properties
@@ -123,3 +123,10 @@ file.build.custom=build-custom.xml
 file.properties.custom=build-custom.properties
 
 
+#################################################################################
+#
+#  URL PROPERTIES
+#
+#################################################################################
+
+url.project.axisservice=http://${web_server_name}:${web_server_port}/${project_name}/ws/AxisServlet
