Added missing <javac...> task to rundemo target...
SVN-Revision: 243

--- a/conf/demo/thick-client/build.xml
+++ b/conf/demo/thick-client/build.xml
@@ -34,6 +34,13 @@
 	<!-- ************************************************************************************************-->
 
 	<target name="rundemo">
+		<javac srcdir="." >
+			<include name="TestClient.java"/>
+			<classpath refid="classpath"/>
+			<classpath>
+				<pathelement location="${src.dir}"/>
+			</classpath>
+		</javac>		
 		<echo>${java.class.path}</echo>
 		<java classname="TestClient" fork="true">
 			<classpath refid="classpath"/>
