Changed JBoss location. Needed for testing against tech stack upgrade
SVN-Revision: 277

--- a/conf/deploy.properties
+++ b/conf/deploy.properties
@@ -24,7 +24,7 @@
 #
 ######################################
 mysql_home=C:/mysql
-j2se_container_home=c:/jboss-4.0.2
+j2se_container_home=c:/jboss-4.0.4.GA
 
 ######################################
 #
@@ -106,7 +106,7 @@ datadump_name=cabioexampledata.SQL
 create_cache=yes
 #cachepath=C:/tomcat/temp/cache
 
-cachepath=C:/jboss-4.0.2/cache/cache
+cachepath=C:/jboss-4.0.4.GA/cache/cache
 #cachepath=/usr/local/jboss-4.0.2/server/default/log/cache
 
 
